--- a/package.json
+++ b/package.json
@@ -5,13 +5,23 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "serve": "yarn build && yarn start",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@agile-ts/core": "^0.2.8",
+    "@agile-ts/react": "^0.2.3",
+    "@types/sharp": "^0.30.4",
+    "@types/styled-components": "^5.1.25",
+    "axios": "^0.27.2",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-dropzone": "^14.2.1",
+    "react-toastify": "^9.0.4",
+    "sharp": "^0.30.6",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.41",
@@ -20,5 +30,8 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.3"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
