--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/sharp": "^0.30.4",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
+    "jimp": "^0.16.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
