--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "serve": "yarn build && yarn start",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --config .prettierrc --write \"**/*.{js,ts}\""
   },
   "dependencies": {
     "@agile-ts/core": "^0.2.8",
@@ -30,6 +31,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "prettier": "^2.6.2",
     "typescript": "4.7.3"
   },
   "resolutions": {
