--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "yarn build && yarn start",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --config .prettierrc --write \"**/*.{js,ts}\""
+    "prettier": "prettier --config .prettierrc --write \"**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "@agile-ts/core": "^0.2.8",
